# aubo_i7_moveit_simulation

./: README.md
aubo_description/: CMakeLists.txt  package.xml
aubo_moveit_config/: .setup_assistant  package.xml
aubo_moveit_config/config/: aubo_i7.ros2_control.xacro  aubo_i7.srdf  aubo_i7.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
aubo_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
trajectory_planning/: CMakeLists.txt  package.xml
trajectory_planning/src/: trajectory_planning.cpp
